overflow-y fix (pt2)

--- a/src/app/components/unit-details-dialog/tabs/unit-details-factions-tab.component.css
+++ b/src/app/components/unit-details-dialog/tabs/unit-details-factions-tab.component.css
@@ -1,5 +1,6 @@
 :host {
-    height: 100%;
+    height: fit-content;
+    min-height: 100%;
     width: 100%;
 }
 
@@ -12,8 +13,7 @@
     flex: 1;
     width: 100%;
     height: 100%;
-    box-sizing: border-box;    
-    overflow-y: auto;
+    box-sizing: border-box;
 }
 
 .faction-availability-list {
@@ -21,7 +21,6 @@
     grid-template-columns: auto 1fr;
     padding: 16px;
     gap: 8px 16px;
-    overflow-y: auto;
     align-items: baseline;
 }
 
