--- a/src/app/components/unit-details-dialog/tabs/unit-details-intel-tab.component.css
+++ b/src/app/components/unit-details-dialog/tabs/unit-details-intel-tab.component.css
@@ -1,5 +1,6 @@
 :host {
-    height: 100%;
+    height: fit-content;
+    min-height: 100%;
     width: 100%;
 }
 
@@ -12,14 +13,12 @@
     flex: 1;
     width: 100%;
     height: 100%;
-    box-sizing: border-box;    
-    overflow-y: auto;
+    box-sizing: border-box;
 }
 
 .fluff-content {
     display: flow-root;
     padding: 16px;
-    overflow-y: auto;
     flex-grow: 1;
 }
 
@@ -57,6 +56,14 @@
     display: block;
     filter: invert(1) sepia(1) hue-rotate(160deg) saturate(0.3) brightness(0.9) contrast(1.15);
     mix-blend-mode: lighten;
+    opacity: 1;
+    transition: opacity 300ms ease-out;
+}
+
+/* Hide fluff image during swiping */
+.fluff-image-container.swiping .fluff-image {
+    opacity: 0;
+    transition: opacity 0ms;
 }
 
 .fluff-section {
