--- a/src/app/components/unit-details-dialog/tabs/unit-details-sheet-tab.component.css
+++ b/src/app/components/unit-details-dialog/tabs/unit-details-sheet-tab.component.css
@@ -1,5 +1,6 @@
 :host {
-    height: 100%;
+    height: fit-content;
+    min-height: 100%;
     width: 100%;
 }
 
@@ -13,5 +14,4 @@
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-    overflow-y: auto;
 }
